@@ -101,3 +101,6 @@
 # Cases where a function can be partially calculated
 [:function, :SUM, [:array, [:row, [:cell, :A1], [:number, 12]]], [:function, :COSH, [:cell, :B1]], [:arithmetic, [:number, 3], [:operator, :+], [:number, 3]], [:number, 6]]	[:function, :SUM, [:cell, :A1], [:function, :COSH, [:cell, :B1]], [:number, 24]]
 [:prefix, "-", [:function, :SUM, [:array, [:row, [:sheet_reference, :"G.30 (data)", [:cell, :I4]]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]], [:row, [:number, 0]]]]]	[:prefix, "-", [:function, :SUM, [:sheet_reference, :"G.30 (data)", [:cell, :I4]]]]
+
+# String functions
+[:function, :LEFT, [:function, :RIGHT, [:string, "RLNKOKEWI-E"], [:arithmetic, [:function, :LEN, [:string, "RLNKOKEWI-E"]], [:operator, :"-"], [:function, :LEN, [:blank]]]], [:number, 3]]	[:string, "RLN"]
