@@ -1,6 +1,8 @@
+module BlankCell; end
+
 class InlineFormulaeAst
 
-  BLANK = [:number, 0]
+  BLANK = [:number, 0].extend(BlankCell)
   
   attr_accessor :references, :current_sheet_name, :inline_ast
   attr_accessor :count_replaced
